k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chatbot-deployment
  labels:
    app: chatbot
spec:
  replicas: 2
  selector:
    matchLabels:
      app: chatbot
  template:
    metadata:
      labels:
        app: chatbot
    spec:
      containers:
      - name: chatbot
        image: ${DOCKER_IMAGE}  # Set via envsubst in your workflow
        imagePullPolicy: Always
        ports:
          - containerPort: 80    # for the client (static files)
            name: client
          - containerPort: 5000  # for the API server
            name: server
