k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: chatbot-service
spec:
  type: LoadBalancer
  selector:
    app: chatbot
  ports:
    - name: client
      port: 80
      targetPort: client
    - name: server
      port: 5000
      targetPort: server
